[project]
name = "allrs-gsm8k-experiments"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.37.0",
    "datasets>=2.15.0",
    "peft>=0.6.2",
    "bitsandbytes>=0.41.1",
    "hydra-core>=1.3.2",
    "wandb>=0.16.0",
    "optuna>=3.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.1",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.0",
]
